--- a/data/common.yaml
+++ b/data/common.yaml
@@ -1,6 +1,7 @@
 ---
 message: "This node is using common data"
-test::createfile: /opt/test1
-  owner: user1
-  group: group1
-  perm:  655
+test::createfile: 
+  /opt/test1:
+    owner: user1
+    group: group1
+    perm:  655
