--- a/data/common.yaml
+++ b/data/common.yaml
@@ -2,6 +2,6 @@
 message: "This node is using common data"
 test::createfile: 
   /opt/test1:
-    owner: user1
-    group: group1
+    owner: root
+    group: root
     mode:  655
