--- a/data/common.yaml
+++ b/data/common.yaml
@@ -2,6 +2,7 @@
 message: "This node is using common data"
 test::createfile: 
   /opt/test1:
+    ensure: directory
     owner: root
     group: root
     mode:  '0655'
