--- a/data/common.yaml
+++ b/data/common.yaml
@@ -1,7 +1,7 @@
 ---
 message: "This node is using common data"
 test::createfile: 
-  /opt/test1:
+  /cognos:
     ensure: directory
     owner: root
     group: root
